--- a/.github/workflows/brazil-holidays.yml
+++ b/.github/workflows/brazil-holidays.yml
@@ -21,10 +21,13 @@ jobs:
       with:
         python-version: '3.12'
         cache: 'pip'
-    - name: Install dependencies
+    - name: Configure Environment
       run: |
         python -m pip install --upgrade pip
+        python -m venv env
+        source env/bin/activate
         pip install -r requirements.txt
+        echo "PYTHONPATH=$PYTHONPATH;src" >> $GITHUB_ENV
     - name: Test with unittest
       run: |
         python -m unittest discover -s ./tests -v
