--- a/.github/workflows/brazil-holidays.yml
+++ b/.github/workflows/brazil-holidays.yml
@@ -23,11 +23,11 @@ jobs:
         cache: 'pip'
     - name: Configure Environment
       run: |
-        python -m pip install --upgrade pip
         python -m venv env
         source env/bin/activate
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
-        echo "PYTHONPATH=$PYTHONPATH;src" >> $GITHUB_ENV
+        echo "PYTHONPATH=src" >> $GITHUB_ENV
     - name: Test with unittest
       run: |
         python -m unittest discover -s ./tests -v
