--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,11 +4,13 @@ name: Run Tests
   push:
     paths:
       - src/**
+      - tests/**
     branches:
       - main
   pull_request:
     paths:
       - src/**
+      - tests/**
     branches:
       - main
 
